pushing up final styles

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
+    "connect-flash": "^0.1.1",
     "connect-redis": "^3.4.0",
+    "cookie-parser": "^1.4.3",
     "cryptiles": "^4.1.2",
     "dotenv": "^6.1.0",
     "ejs": "^2.6.1",
